objects/PackageForecast__c.object
<CustomObject>
    <description>Forecast for TR package</description>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <formula>ForecastedAmount__c  *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastedAmount__c</fullName>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Package_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>List rental</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TR Item</label>
    <nameField>
        <label>TR Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TR Package</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>